# linear-regression-ks

./: Dockerfile  README.md  __init__.py  pyproject.toml  requirements.txt
src/simple-linear-regression-ksarafrazi/: app.py  data_loader.py  data_transformer.py  main.py  simple_linear_regr.py  simple_linear_regr_utils.py
src/simple-linear-regression-ksarafrazi/model/: model.pickle  model_json.json
src/simple-linear-regression-ksarafrazi/tests/: test_data_loader.py
src/simple-linear-regression-ksarafrazi/tests/.ipynb_checkpoints/: test_api-checkpoint.py
