[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-linear-regression-ksarafrazi"
version = "0.0.1"
authors = [
  { name="Kathy", email="katayoon.sarafrazi@gmail.com" },
]
description = "Linear Regression Model with SGD"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "github.com"
"Bug Tracker" = "github.com"